2006-02-06  Tom Tromey  <tromey@redhat.com>

	* gnu/CORBA/NamingService/NamingServiceTransient.java (main): Use
	2006.
	* gnu/java/rmi/registry/RegistryImpl.java (version): Use 2006.

2006-02-06  Anthony Green  <green@redhat.com>

	* gnu/xml/aelfred2/XmlParser.java: Add missing break;.

2006-02-07  Raif S. Naffah  <raif@swiftdsl.com.au>

	* .settings/org.eclipse.jdt.core.prefs:
	Force a line split on extends and implements.
	Force a white-space after unary operators.
	Don't force a new-line after @params.
	Add new-line at end-of-file.
	* scripts/eclipse-gnu.xml: Export version of the above named GNU.

2006-02-07  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/java/security/provider/GnuDSAPublicKey.java (getEncoded): Use
	Registry constant.
	* gnu/java/security/provider/GnuDSAPrivateKey.java (getEncoded):
	Likewise.
	* gnu/java/security/provider/GnuRSAPrivateKey.java (getEncoded):
	Likewise.
	* gnu/java/security/provider/GnuRSAPublicKey.java (getEncoded):
	Likewise.
	* gnu/java/security/provider/EncodedKeyFactory.java
	(ID_DSA): Redefined in terms of Registry constant.
	(ID_DSA): Redefined in terms of Registry constant.
	(ID_DH): Redefined in terms of Registry constant.
	* gnu/java/security/Registry.java (X509_ENCODING): New constant.
	(PKCS8_ENCODING): Likewise.
	(ASN1_ENCODING): Likewise.
	(RAW_ENCODING_SHORT_NAME): Likewise.
	(X509_ENCODING_SORT_NAME): Likewise.
	(PKCS8_ENCODING_SHORT_NAME): Likewise.
	(ASN1_ENCODING_SHORT_NAME): Likewise.
	(X509_ENCODING_ID): Likewise.
	(PKCS8_ENCODING_ID): Likewise.
	(ASN1_ENCODING_ID): Likewise.
	(DSA_OID_STRING): Likewise.
	(RSA_OID_STRING): Likewise.
	(DH_OID_STRING): Likewise.

2006-02-06  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/GlyphView.java:
	(DefaultGlyphPainter.paint): Store/restore Graphics color setting.
	Only fill background if there is a background set on the view.
	Call Utilities.drawTabbedText with the baseline height, rather than
	the upper left corner of the view rectangle.